# ML_SC

./: Anchor.toml  PROCESS.md  README.md
programs/magiclottery/: Cargo.toml
programs/magiclottery/src/: lib.rs
programs/magiclottery/src/clones/: mod.rs  program_ids.rs
programs/magiclottery/src/errors/: errors.rs
programs/magiclottery/src/global_accounts/: central_account.rs  mod.rs
programs/magiclottery/src/instructions/: buy_ticket.rs  create_lottery.rs  create_tree.rs  disolve_ticket.rs  initialize.rs  mod.rs
